base/be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - sth.tsungmn.com
      secretName: gitops-tls
  rules:
    - host: sth.tsungmn.com
      http:
        paths:
          - backend:
              service:
                name: be-service
                port:
                  number: 80
            path: /v1/
            pathType: Prefix
